# cpp-generic-graph

./: .gitignore  CMakeLists.txt  LICENSE
src/: graph.hpp  main.cpp
src/representation/: list_graph.hpp
src/utility/: maybe.hpp
